--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "aos": "^2.3.4",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "ethers": "^5.6.9",
